1.20.1 port c3: data layer — components → NBT, UUID attribute modifiers, 1.20.1 item APIs
- SpellDataComponents deleted; new NBT facade api/item/SpellItemData
  (stack sub-compound "spell_engine": spell_container / spell_choice /
  equipment_set / item_model + item_name / rarity overrides) with
  item-level defaults (SpellItemData.defaults(item|settings) +
  ItemDefaultsMixin) replacing Item.Settings#component.
- SpellChoice.apply_on_choice / ComponentChanges removed entirely;
  SpellChoices.clear(stack) resolves a choice.
- New api/item/ItemAttributeModifiers (1.21 AttributeModifiersComponent
  stand-in, same JSON shape) and AttributeModifierUtil as the single
  attribute seam: Identifier→UUID via SpellPower ModifierDefinitions,
  per-item modifier defaults served by ItemStackAttributeModifiersMixin.
- Weapon/Armor/Shield/RangedWeapon(s)/ConfigUtil rebuilt on 1.20.1:
  vanilla ATTACK_DAMAGE/SPEED ids via ItemAccessor trick, per-slot armor
  UUIDs, plain ArmorMaterial (Armor.CustomMaterial / Armor.material),
  ShieldFactory matching ShieldAPI 1.20.1, RWA 1.1 RangedConfig mapping.
- Criteria back to JSON AbstractCriterionConditions, loot function on
  the Gson Serializer API, SpellBindingBlock/ScrollItem/UniversalSpellBook
  on 1.20.1 signatures; ArmorMaterialLayerAccessor + DataComponentTypesMixin
  deleted from spell_engine.mixins.json.